Implementing dark navbar
Former-commit-id: 8ddee88765791030e4a0ddbc547dc0db7f6fb8d8

--- a/lib/jade/docs/3.x/index.jade
+++ b/lib/jade/docs/3.x/index.jade
@@ -8,13 +8,28 @@ block fullPane
   p Choose how you'd like to get started
 
   h3
-    a(href="#") Barebones
+    a(href="#barebones") Barebones
   p Just use the CSS/JS file
 
   h3
-    a(href="#") Dependency-managed
+    a(href="#framework") Framework
   p Use in another framework like Rails or Express
 
   h3
-    a(href="#") Full build environment
+    a(href="#gulp") Full build environment
   p Use our Gulp-powered compilation boilerplate
+
+  header#barebones.page-heading
+    h3 Barebones
+
+  p Foo
+
+  header#framework.page-heading
+    h3 Framework
+
+  p Foo
+
+  header#gulp.page-heading
+    h3 Gulp
+
+  p Foo
