--- a/lib/sass/docs.sass
+++ b/lib/sass/docs.sass
@@ -31,7 +31,7 @@
   +navbar($bleed-container: true)
 
 .docs-nav
-  +navbar($bleed-container: true)
+  +navbar($bleed-container: true, $background: $lightest-black)
 
 // Colors
 // Kind of shitty, but there is a colors page that directly relies on this.
