--- a/lib/sass/kickstart.sass
+++ b/lib/sass/kickstart.sass
@@ -22,7 +22,7 @@
     +button($orange)
 
   &.yellow
-    +button($orange)
+    +button($yellow)
 
   &.green
     +button($green)
@@ -63,6 +63,9 @@
 
 .navbar
   +navbar
+
+.navbar-dark
+  +navbar($background: $lighter-black)
 
 // STATUS
 // ------
