--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -33,7 +33,7 @@ $white:          #FFF
 
 $red:            #CA3518
 $orange:         darkorange
-$yellow:         gold
+$yellow:         yellow
 $green:          #58AA00
 $blue:           cornflowerblue
 $violet:         darkmagenta
