--- a/lib/sass/components/_buttons.sass
+++ b/lib/sass/components/_buttons.sass
@@ -8,7 +8,9 @@
   border-color: hsla(0, 0%, 0%, 0.1)
   color: $light-black
 
-  @if (lightness($color) < 75%)
+  @if $color == $yellow
+    color: $lighter-black
+  @else
     color: $white
 
   &:hover
