--- a/lib/sass/components/_nav.sass
+++ b/lib/sass/components/_nav.sass
@@ -9,7 +9,7 @@
   border-top: 1px solid $darker-white
 
   nav
-    flex: inline-flex
+    display: inline-flex
     align-items: flex-start
     +flex-wrap
     justify-content: space-between
@@ -18,9 +18,9 @@
     border-radius: 0
 
     @if (lightness($background) < 75%)
-      color: $black
-    @else
       color: $white
+    @else
+      color: $lighter-black
 
     h1
       margin-bottom: 0
