--- a/lib/sass/components/_nav.sass
+++ b/lib/sass/components/_nav.sass
@@ -140,9 +140,9 @@
 
             &:hover
               color: rgba(0, 0, 0, 0.85)
-              background: $darker-white
-              border-color: $darker-white
+              background: $dark-white
+              border-color: $dark-white
 
             &:active
-              background: $darkest-white
-              border-color: $darkest-white
+              background: $darker-white
+              border-color: $darker-white
