--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -43,7 +43,7 @@ $violet:         darkmagenta
 // Modifying just these ten variables will take care of 90% of your theme
 
 $primary-color:       $blue
-$secondary-color:     0
+$secondary-color:     $darker-white
 $space:               25px
 $heading-font-family: 'Lato', helvetica neue, sans-serif
 $body-font-family:    'Lato', helvetica neue, sans-serif
