--- a/lib/sass/components/_buttons.sass
+++ b/lib/sass/components/_buttons.sass
@@ -8,10 +8,13 @@
   border-color: hsla(0, 0%, 0%, 0.1)
   color: $light-black
 
-  @if $color == $yellow
+  @if lightness($color) > 75%
     color: $lighter-black
   @else
     color: $white
+
+  @if $color == $yellow
+    color: $lighter-black
 
   &:hover
     +box-shadow(0px -3px 0px 0px rgba(0, 0, 0, 0.1) inset)
