--- a/lib/sass/kickstart.sass
+++ b/lib/sass/kickstart.sass
@@ -15,6 +15,12 @@
 .button, button, input[type=submit]
   +button
   // TODO: Make loop
+  &.primary
+    +button($primary-color)
+
+  &.secondary
+    +button($secondary-color)
+    
   &.red
     +button($red)
 
