--- a/lib/jade/index.jade
+++ b/lib/jade/index.jade
@@ -21,7 +21,7 @@ block mainpane
     .more
       :markdown
         ## Feature-forward
-        Kickstart targets the most modern browsers at the time of release. This means we've skipped over the hacks and headed straight to exciting components like using CSS flexbox for the [grid](/docs/grid/).
+        Kickstart targets the most modern browsers at the time of release. This means we've skipped over the hacks and headed straight to exciting components like using CSS flexbox for the [grid](/docs/3.x/grid/).
 
         ## Second thing
         Second thing
