adding some more quickstart instructions
Former-commit-id: 2e64f3bbe7388ad1f65931cb5d09a7d3829f5962

--- a/lib/jade/docs/3.x/index.jade
+++ b/lib/jade/docs/3.x/index.jade
@@ -66,3 +66,12 @@ block fullPane
     extras. The easiest way to get started with a gulp implementation of
     kickstart is to simply
     [clone the repo](https://github.com/ajkochanowicz/Kickstrap).
+
+    Setup instructions are in the README.md file at the repo.
+
+    Once you have your environment up and running, you should empty the jade
+    folder and use kickstart-semantic.sass. This was designed specifically as an
+    empty file with everything imported in.
+
+    Rename it to whatever you like and link to the resulting .css file in your
+    html/jade
