Adding Kickstrap logo
Former-commit-id: 28d6e5ea445bd989f29ec4f8c9026658d1164dc1

--- a/lib/jade/index.jade
+++ b/lib/jade/index.jade
@@ -2,7 +2,7 @@ extends layout
 
 block bleed
   header.hero
-    h1 Kickstart 3
+    img.logo(src="/img/kickstart.png")
     h5 A front-end framework for clean HTML<br>and fast performance.
 
 block mainpane
