--- a/lib/sass/components/_typography.sass
+++ b/lib/sass/components/_typography.sass
@@ -61,6 +61,10 @@ a
   margin-bottom: $space
   box-shadow: inset 0px -30px 100px -20px hsla(0, 0%, 0%, 0.15), inset 0px 40px 90px -20px rgba(255, 255, 255, 0.15)
 
+  img
+    margin: 0px auto
+    display: block
+
 =heading-break
   margin:
     top: 2rem
