--- a/lib/sass/docs.sass
+++ b/lib/sass/docs.sass
@@ -107,3 +107,8 @@ h1.example-
       color: $light-black
       font-weight: 400
       font-size: 1.1rem
+
+// Images
+
+.logo
+  max-width: 600px
