Adding ks logo to header
Former-commit-id: 423c7ab51a99631a6d66012ec5c5b364aabff362

--- a/lib/jade/_header.jade
+++ b/lib/jade/_header.jade
@@ -3,7 +3,7 @@
     nav
       ul
         li
-          h1 Kickstart 3
+          img.logo(src="/img/kickstart-black.png")
         li
           a(href="/") Home
         li
