--- a/lib/sass/docs.sass
+++ b/lib/sass/docs.sass
@@ -30,6 +30,13 @@
 .main-navigation
   +navbar($bleed-container: true)
 
+  .logo
+    height: 30px
+    margin:
+      top: 5px
+      bottom: -5px
+    opacity: 0.8
+
 .docs-nav
   +navbar($bleed-container: true, $background: $lightest-black)
 
