Adding download button
Former-commit-id: 0e201c03d9123db09995b29351147202912eff8d

--- a/lib/jade/_header.jade
+++ b/lib/jade/_header.jade
@@ -13,4 +13,6 @@
 
       ul
         li
-          // input(type="search" placeholder="Search")
+          a.button.blue(href="/docs/3.x/" role="button")
+            span.fa.fa-cloud-download
+            |  Download
