--- a/lib/jade/docs/3.x/grid/index.jade
+++ b/lib/jade/docs/3.x/grid/index.jade
@@ -12,6 +12,11 @@ block toc-basic
     li
       a(href="#offsets") Offsets
 
+block toc-variations
+  ul
+    li
+      a(href="#responsive") Responsive
+
 block basic
   .example
     .row
@@ -161,8 +166,111 @@ block basic
 
 
 block variations
-  h2 Responsive
+  h2#responsive Responsive
 
+  .ifnot-semantic
+    :markdown
+      Setting column rules via classes requires just a bit more syntax.
+
+      It is best practice to set the styles you expect on your smallest device
+      first. This is what is known as designing "[Mobile First](http://bradfrostweb.com/blog/mobile/the-many-faces-of-mobile-first/)"
+
+      For this, we'll use a regular grid class.
+
+          <div class="row">
+            <section class="col-12">
+              <h1>About me</h1>
+              <p>...</p>
+            </section>
+            <section class="col-12">
+              <h1>My work</h1>
+              <p>...</p>
+            </section>
+            <section class="col-12">
+              <h1>Get in touch</h1>
+              <p>...</p>
+            </section>
+          </div>
+
+      In this example, we want these three sections to stack on top of one
+      another. However, on tablet, it would be nice to have the first two in two
+      columns. We can use the following syntax to create a mobile rule:
+
+          .col-[size]-[columns]
+
+      `size` is the viewport size and `columns` is a number 1-12.
+
+      Here are the sizes available with their corresponding widths:
+
+    table
+      thead
+        tr
+          th Size name
+          th Actual width
+      tbody
+        - for breakpoint in [{name: 'xs', size: '360px'}, {name: 'sm', size: '480px'}, {name: 'rg', size: '768px'}, {name: 'md', size: '1024px'}, {name: 'lg', size: '1200px'}, {name: 'xl', size: '1400px' }]
+          tr
+            td
+              code #{breakpoint.name}
+            td #{breakpoint.size}
+
+    :markdown
+      Now let's add a rule.
+
+          <div class="row">
+            <section class="col-12 col-md-6">
+              <h1>About me</h1>
+              <p>...</p>
+            </section>
+            <section class="col-12 col-md-6">
+              <h1>My work</h1>
+              <p>...</p>
+            </section>
+            <section class="col-12">
+              <h1>Get in touch</h1>
+              <p>...</p>
+            </section>
+          </div>
+
+      As you can see, we did not need to add a class to the last `section` because
+      we want that to stay full width, at least for this breakpoint.
+
+      On desktop, we have enough room to split these up a little more. Let's make
+      each one of them a third of the total width.
+
+          <div class="row">
+            <section class="col-12 col-md-6 col-lg-4">
+              <h1>About me</h1>
+              <p>...</p>
+            </section>
+            <section class="col-12 col-md-6 col-lg-4">
+              <h1>My work</h1>
+              <p>...</p>
+            </section>
+            <section class="col-12 col-lg-4">
+              <h1>Get in touch</h1>
+              <p>...</p>
+            </section>
+          </div>
+
+    h3#offsets
+
+    :markdown
+      For mobile offsets, we use the form:
+
+          .col-offset-[size]-[columns]
+
+      If we wanted our "Get in touch" section above to half-sized and offset by
+      half on a medium-sized display, we could add this:
+
+          <section class="col-12 col-md-6 col-offset-md-6 col-lg-4">
+            <h1>Get in touch</h1>
+            <p>...</p>
+          </section>
+
+      The offset will automatically remove itself if a `col-lg` column definition
+      is declared.
+      
   .if-semantic
     :markdown
       Mix your grid rules into media queries to make your own responsive rules.
