Adding rails integration
Former-commit-id: f9c7673e1497bc8e65ace3034da047358b9bd151

--- a/lib/jade/docs/3.x/index.jade
+++ b/lib/jade/docs/3.x/index.jade
@@ -55,6 +55,9 @@ block fullPane
     Make sure any JavaScript code that uses `k$` goes after the script tag
     inclusion of kickstart.js.
 
+    Notice that using this method will obviously not allow for using the
+    semantic version of the docs.
+
   header#framework.page-heading
     h3 Rails
 
