Changing name of gem one more time.
Former-commit-id: c37ef983520284c94821ae76bf6f8761986dd4e4

--- a/lib/jade/docs/3.x/index.jade
+++ b/lib/jade/docs/3.x/index.jade
@@ -64,9 +64,9 @@ block fullPane
   :markdown
     Install Kickstart
 
-        gem install "kickstart-sass"
+        gem install "kickstart_rails"
 
-    As the gem name implies, Rails integration is Sass-only. This means you will
+    Rails integration is Sass-only. This means you will
     need to use the mixins instead of things like `.col-6`.
 
     Some of this is practical, some is philosophical, but if you really need the
