--- a/lib/jade/docs/3.x/index.jade
+++ b/lib/jade/docs/3.x/index.jade
@@ -62,7 +62,7 @@ block fullPane
     h3 Rails
 
   :markdown
-    Install Kickstart
+    Install the [Kickstart gem](https://rubygems.org/gems/kickstart_rails)
 
         gem install "kickstart_rails"
 
