--- a/lib/sass/core/_components.sass
+++ b/lib/sass/core/_components.sass
@@ -6,13 +6,13 @@
  */
 
 // Components
-@import components/_root-element
-@import components/_buttons
-@import components/_forms
-@import components/_modals
-@import components/_nav
-@import components/_progress
-@import components/_status
-@import components/_tables
-@import components/_tiles
-@import components/_typography
+@import ../components/_root-element
+@import ../components/_buttons
+@import ../components/_forms
+@import ../components/_modals
+@import ../components/_nav
+@import ../components/_progress
+@import ../components/_status
+@import ../components/_tables
+@import ../components/_tiles
+@import ../components/_typography
