Wow, border-box isn't in normalize css?
Former-commit-id: 381e81436b88dc03e5680924d6ba4b6e53e0b28b

--- a/lib/sass/core/_base.sass
+++ b/lib/sass/core/_base.sass
@@ -1,2 +1,5 @@
 // Vendor libraries
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,900,400italic)
+
+*
+  box-sizing: border-box
