--- a/lib/jade/docs/3.x/index.jade
+++ b/lib/jade/docs/3.x/index.jade
@@ -87,6 +87,14 @@ block fullPane
 
         @import "kickstart_rails/themes/_default";
 
+    #### Autoprefixing
+
+    The gem uses autoprefixer to automatically prefix styles. If you want to
+    specify your own autoprefixing rule, you'll just need to add a .yml file
+
+    See the instructions 
+    [at the Autoprefixer docs](https://github.com/ai/autoprefixer-rails)
+
   header#gulp.page-heading
     h3 Gulp
 
