--- a/lib/jade/docs/3.x/ui/navigation/index.jade
+++ b/lib/jade/docs/3.x/ui/navigation/index.jade
@@ -20,6 +20,8 @@ block hero-example
       ul
         li
           a(href="#") Login
+        li
+          a.button(href="#" role="button") Signup
 
 block meta
   table
