--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -68,7 +68,7 @@ $default-line-height: 1.4rem
 // BUTTONS
 // -------
 
-=button($color: $darker-white)
+=button($color: transparent)
   +button-default($color)
 
 // FORMS
