--- a/lib/sass/components/_buttons.sass
+++ b/lib/sass/components/_buttons.sass
@@ -16,6 +16,9 @@
   @if $color == $yellow
     color: $lighter-black
 
+  @if $color == transparent
+    color: $lighter-black
+
   &:hover
     +box-shadow(0px -3px 0px 0px rgba(0, 0, 0, 0.1) inset)
     text-decoration: none
