--- a/lib/sass/core/_components.sass
+++ b/lib/sass/core/_components.sass
@@ -12,7 +12,7 @@
 @import ../components/_modals
 @import ../components/_nav
 @import ../components/_progress
-@import ../components/_status
+@import ../components/_notifications
 @import ../components/_tables
 @import ../components/_tiles
 @import ../components/_typography
