--- a/lib/sass/docs.sass
+++ b/lib/sass/docs.sass
@@ -103,6 +103,10 @@ h1.example-
   ul, ul li, .navbar
     text-align: left
 
+  .logo
+    width: 600px
+    max-width: 95%
+
   form, table, .tile
     text-align: left
     max-width: 360px
