--- a/lib/jade/layout.jade
+++ b/lib/jade/layout.jade
@@ -4,6 +4,7 @@ html(lang='en')
     link(rel="stylesheet" href="/css/docs.css")
     link(rel="stylesheet" href="/css/kickstart.css")
     link(href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet")
+    meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no")
   body
     include _header
 
