statuses are now colored
Former-commit-id: b7c90955eb578260bb8e8eba5aec0af0578b6bf4

--- a/lib/jade/docs/3.x/ui/modals/index.jade
+++ b/lib/jade/docs/3.x/ui/modals/index.jade
@@ -4,7 +4,7 @@ block hero-title
   h1 Modals
 
 block hero-example
-  button.button#launchSampleModal Launch modal
+  button.button.blue#launchSampleModal Launch modal
 
 block meta
   table
