--- a/lib/sass/components/_notifications.sass
+++ b/lib/sass/components/_notifications.sass
@@ -14,6 +14,25 @@
     border-color: transparent
     text-align: center
     font-size: 0.75rem
+    font-weight: bold
     margin: 5px auto
     max-width: 300px
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15)
+    animation-duration: 0.25s
+    animation-delay: 0.2s
+    animation-timing-function: ease
+    animation-fill-mode: both
+    z-index: 1000
+    animation-name: fadeInDown
+
+    &[data-type="success"]
+      background-color: $green
+      color: white
+
+    &[data-type="error"]
+      background-color: $red
+      color: white
+
+    &[data-type="info"]
+      background-color: $blue
+      color: white
