Throttler and Debouncer projs now compile directly into correct dir
Former-commit-id: e630fc0075c5a3450e4580fb2a9d52ed41295c3b

--- a/lib/jade/docs/3.x/functions/throttling/index.jade
+++ b/lib/jade/docs/3.x/functions/throttling/index.jade
@@ -24,6 +24,8 @@ block basic
     X milliseconds have elapsed since it was last sent through the
     debouncer.
 
+  iframe(src="/iframes/debouncer/debouncer.html")
+
 block variations
   h3 Debouncer
   h3 Throttle
