Fixing up a few things
Former-commit-id: 9a9e66572afabe8b3c011c271804abf5e99124cc

--- a/lib/jade/_header.jade
+++ b/lib/jade/_header.jade
@@ -13,6 +13,6 @@
 
       ul
         li
-          a.button.blue(href="/docs/3.x/" role="button")
+          a.button.primary(href="/docs/3.x/" role="button")
             span.fa.fa-cloud-download
             |  Download
