--- a/lib/jade/docs/3.x/functions/throttling/index.jade
+++ b/lib/jade/docs/3.x/functions/throttling/index.jade
@@ -5,6 +5,8 @@ block hero-title
 
 block basic
   :markdown
+    ## Throttling
+
     Throttling is a function used by a few components in the library,
     so we've made it available as a standalone function.
 
@@ -17,6 +19,8 @@ block basic
 
 
   :markdown
+    ## Debouncing
+
     You can also debounce a component with `k$.debounce()`
 
         k$.debounce(myfunc, 'save name')
