--- a/lib/jade/docs/3.x/index.jade
+++ b/lib/jade/docs/3.x/index.jade
@@ -31,11 +31,11 @@ block fullPane
   p Or download kickstart.css and kickstart.js and include in your html file.
 
   p
-    a.button(href="#")
+    a.button.primary(href="/css/kickstart.css")
       span.fa.fa-cloud-download
       |  kickstart.css
     | &nbsp;
-    a.button(href="#")
+    a.button.primary(href="/js/kickstart.js")
       span.fa.fa-cloud-download
       |  kickstart.js
 
