--- a/lib/jade/docs/3.x/index.jade
+++ b/lib/jade/docs/3.x/index.jade
@@ -25,8 +25,8 @@ block fullPane
   :markdown
     Use the CDN
 
-        <link rel="stylesheet" href="TODO" />
-        <script type="text/javascript" src="TODO"></script>
+        <link rel="stylesheet" href="//cdn.getkickstart.com/css/kickstart.css" />
+        <script type="text/javascript" src="//cdn.getkickstart.com/js/kickstart.js"></script>
 
   p Or download kickstart.css and kickstart.js and include in your html file.
 
