Almost done with notifications
Former-commit-id: 161cd6c898bcb7f03a2d6e3540c2b4a866bbc713

--- a/lib/jade/docs/3.x/layout.jade
+++ b/lib/jade/docs/3.x/layout.jade
@@ -52,11 +52,11 @@ block container
       section.variations#variations
         h1
           span.fa.fa-cubes
-          |  Variations
+          |  Digging deeper
         block variations
 
       section.granular#granular
-        h1 Granular
+        // h1 Granular
         block granular
 
 block postJS
