Calling notifications finished
Former-commit-id: 0512264c7bcc0af1b7bb387aee305fe1f3585329

--- a/lib/jade/docs/3.x/ui/notifications/index.jade
+++ b/lib/jade/docs/3.x/ui/notifications/index.jade
@@ -5,6 +5,8 @@ block hero-title
 
 block hero-example
   a.button.blue#example-showStatus Show Status
+  | &nbsp;
+  a.button.blue#example-showGrowl Show Growl
 
 block basic
   :markdown
@@ -23,7 +25,7 @@ block basic
     ## Growls
 
     Growls are stackable, right-aligned notifications. Unlike statuses, creating
-    one growl does not replace the existing one. Each Growl has its own delay 
+    one growl does not replace the existing one. Each Growl has its own delay
     and styling properties. Unlike statuses, they are also dismissable like a
     modal.
 
